Version 0.91a+dev
- raised minimal version of PHP to 5.4
- added automated tests runner (requires package nette/robot-loader)

Version 0.9.1a
- small code refactoring
- added README with documentation
- made possible installation via composer

Version 0.9.1
- print correct line ending when run from browswer
- small code refactoring

Version 0.9.0
- initital version