@@ -7,4 +7,5 @@ require TESTER_APP_DIR . "/Job.php";
 require TESTER_APP_DIR . "/Runner.php";
 require TESTER_APP_DIR . "/TestCase.php";
 require TESTER_APP_DIR . "/Tester.php";
+require TESTER_APP_DIR . "/../vendor/autoload.php";
 ?>
